--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -28,8 +28,10 @@
    </div>
   </ul>
 </div>
+<a class="amel-table-list-identifier">Settings:</a>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
+<a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a>
 <a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
 <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
 <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
@@ -60,7 +62,7 @@
     </div>
   </ul>
 </div>
-<a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a>
+<a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a>
 
 </div>
 
@@ -114,6 +116,11 @@
                   <td>{{allifquery.country}}</td>
               
                   </tr>
+                  <tr>
+                    <td class="allif-fix-table-col">Owner</td>
+                    <td>{{allifquery.owner}}</td>
+                
+                    </tr>
         </tbody>
         </table>
       </div>
@@ -126,11 +133,7 @@
        <div class="allif-details-card table-responsive">
        <table class="table table-layout">
         <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Owner</td>
-            <td>{{allifquery.owner}}</td>
-        
-            </tr>
+         
       <tr>
         <td class="allif-fix-table-col">P.O.BOX</td>
         <td>{{allifquery.pobox}}</td>
@@ -161,6 +164,12 @@
                 <td>{{allifquery.updatedon|date:'d/m/Y'}}</td>
             
                 </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Branch</td>
+                  <td>{{allifquery.branch}}</td>
+              
+                  </tr>
+                  
           </tbody>
           </table>
           </div>
@@ -173,6 +182,11 @@
        <!--start of the table here-->
        <table class="table table-layout">
         <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Deletable</td>
+            <td>{{allifquery.can_delete}}</td>
+        
+            </tr>
         <tr>
           <td class="allif-fix-table-col">UID</td>
           <td>{{allifquery.companyuid}}</td>
