--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
@@ -48,7 +48,7 @@
   <div class="allifmaincontainer">
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="table-details-content-description">{{allifquery}} A/C Details</div>
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
     <div class="allif-info-tables">
@@ -63,7 +63,90 @@
        
       <tr>
         <td class="allif-fix-table-col">First Name</td>
-        <td>{{allifqueryset.title}}</td>
+        <td>{{allifquery.first_name}}</td>
+    
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Last Name</td>
+          <td> {{allifquery.last_name}}</td>
+      
+          </tr>
+         
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          
+          <tr>
+            <td class="allif-fix-table-col">email</td>
+            <td>{{allifquery.email}}</td>
+        
+            </tr>
+      <tr>
+        <td class="allif-fix-table-col">Phone</td>
+        <td>{{allifquery.phone}}</td>
+    
+        </tr>
+       
+       
+       
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Category</td>
+            <td>{{allifquery.user_category}}</td>
+              
+            </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+<hr>
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifqueryset}} Profile A/C Details</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+       
+      <tr>
+        <td class="allif-fix-table-col">First Name</td>
+        <td>{{allifqueryset.firstName}}</td>
     
         </tr>
         <tr>
@@ -180,7 +263,7 @@
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
-
+<hr>
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
