--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifpdfuibase.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifpdfuibase.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load humanize %}
-<link rel="shortcut icon" href='{% static "allifmaalcommonapp/css/images/allifmaal-icon.png" %}' type="png/ico">
+<link rel="shortcut icon" href='{% static "allifapperp/css/images/allifmaal-icon.png" %}' type="png/ico">
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,63 +12,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% block style %}
 {% endblock %}
-<style>
-*{
-  font-family: system-ui,Helvetica, sans-serif,sans-serif,Arial,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-}
-
-.allif-pdf-table-header{
-  background-color: #e6e6e6;
-  }
-
-table td {
-  vertical-align: middle !important;
-  text-align: left;
-  margin-left: 3px;
-  padding-left: 3px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  font-family:system-ui,Helvetica, sans-serif,sans-serif,Arial,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-  font-size: 1em;
-}
-table,th  {
-  padding-top: 3px;
-  padding-bottom: 3px;
-  font-family:system-ui,Arial, Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 1.1em;
-  border:none;
-  text-align: left;
-}
-
-.table-bordered {
-  background-color:#fdfdfd;
-}
-.table-bordered td, .table-bordered th {
-  border: 1px solid #b7e9fc;
-}
-
-.company-details-section{
-  border: 1px solid #fcfbfb;
-  word-spacing: normal;
-  letter-spacing: normal;
-  line-height:0px;
-  font-family: system-ui,Helvetica, sans-serif,sans-serif,Arial,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-  font-size: 1.1em;
-  margin-top: 0px;
-  font-weight: normal;
-}
-
-.company-pdf-logo{
-  text-align: center;
-  width: 140px; 
-  max-height: 90px;
-}
-
-</style>
 
 </head>
 <body>
+  {% include 'allifmaalcommonapp/base/uimainbase/main_style_for_pdfs.html' %}
 <table class="company-details-section">
 <thead>
   <tr>
@@ -107,7 +54,9 @@ table,th  {
 
 {% block body %}
 {% endblock %}
-
+<div class="allif_pdf_footer_content">
+  www.allifmaal.com
+</div>
 {% block scripts %}
 {% endblock %}
 
