--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity-client.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity-client.html
@@ -34,7 +34,7 @@
   <div class="allifmaincontainer">
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New Expense</div>
+  <div class="table-details-content-description">Add/Edit New Company Details</div>
   <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
