--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
@@ -31,10 +31,8 @@
   </ul>
 </div>
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
-<a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
 <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
-<a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
+<a href="{% url 'allifmaalcommonapp:commonAddBranch' user_var glblslug %}">Add Branch</a>
 
 </div>
 
