--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
@@ -35,10 +35,9 @@
 
     <a class="amel-table-list-identifier">Branches:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    
+    <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
     <a href="{% url 'allifmaalcommonapp:commonAddBranch' user_var glblslug %}">Add Branch</a>
    
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
   
   </div>
     </div><!--end....header column-->
