--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/delete-branch-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/delete-branch-confirm.html
@@ -17,7 +17,7 @@
 
 <div class="container-fluid amel-content-header">
   <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
+<a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
 </div>
 
     </div><!--end....header column-->
