--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/no-profile.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/no-profile.html
@@ -50,6 +50,7 @@
         </div>
         <div class="error-body">
         <p>The user <strong>{{allifquery}}</strong> has no profile.</p>
+        <p>Create a profile for the user then try again.</p>
         <p>{{error_message}}</p>
         <a href="{% url 'allifmaalusersapp:userLogoutPage' %}" class="loginlink">Login Again</a>
         </div>
