--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -22,7 +22,7 @@
        
        <li><a class="dropdown-item allif-table-links" href="{% url 'allifmaalcommonapp:commonEditSector' allifquery.id user_var glblslug %}">Edit Item</a></li>
        
-       <li><a  class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonSectorDelete' allifquery.id %}">Delete Item</a></li>
+       <li><a  class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteSector' allifquery.id user_var glblslug %}">Delete Item</a></li>
         </div>
       </ul>
     </div>
