improved on users management

--- a/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
@@ -44,8 +44,11 @@
         
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a></li>
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEmailsAndSMS' user_var glblslug %}">Comms</a></li>
+       
         
         <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:ui1' user_var glblslug %}">UIs</a></li>
+        <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:product_list' %}">Products</a></li>
+        
         
 
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminCustomerContacts' user_var glblslug %}">Contacts</a></li>
