--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-details.html
@@ -71,6 +71,11 @@
         
             </tr>
             <tr>
+              <td class="allif-fix-table-col">Division</td>
+              <td>{{allifquery.userdivision}}</td>
+          
+              </tr>
+            <tr>
               <td class="allif-fix-table-col">Department</td>
               <td>{{allifquery.userdepartment}}</td>
           
