--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
@@ -158,7 +158,7 @@
         </td>
         <td>{{item.owner}}</td>
         
-        <td>{{item.email}}</td>
+        <td>{{item.owner.email}}</td>
         <td>{{item.status}}</td>
      
         </td>
